--- a/losttreasure/v4/index.html
+++ b/losttreasure/v4/index.html
@@ -41,185 +41,8 @@
       href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Kavivanar"
       rel="stylesheet"
     />
-    <style>
-      body {
-        font-family: Monospace;
-        background-color: #000;
-        color: #fff;
-        margin: 0px;
-        overflow: hidden;
-      }
-      #message {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translateX(-50%) translateY(-50%);
-        font-family: "Kavivanar", san-serif;
-        font-size: 40px;
-        width: 80%;
-        max-width: 280px;
-        padding: 15px 15px 50px 15px;
-        text-align: center;
-        display: none;
-        align-content: center;
-        justify-content: center;
-        background-color: aliceblue;
-        border: medium solid #3d455c;
-        border-radius: 20px;
-        color: #3d455c;
-        z-index: 99;
-      }
-      #message_ok {
-        position: absolute;
-        bottom: 10px;
-        padding: 10px 20px 10px 20px;
-        font-family: sans-serif;
-        font-size: 20px;
-        background-color: #3d455c;
-        color: #fff;
-        border-radius: 8px;
-        border: medium solid #696882;
-      }
+    <link rel="stylesheet" href="style.css" />
 
-      #sfx-btn {
-        position: absolute;
-        right: 15px;
-        top: 15px;
-        width: 40px;
-        height: 40px;
-        border: none;
-        border-radius: 50%;
-        background: #3b53a2;
-        font-size: 25px;
-        color: #fff;
-      }
-
-      #action-btn {
-        position: absolute;
-        left: 50%;
-        bottom: 5px;
-        width: 40px;
-        height: 40px;
-        border: none;
-        border-radius: 50%;
-        background: #3b53a2;
-        font-size: 25px;
-        color: #fff;
-        transform: translateX(-50%);
-        z-index: 9;
-      }
-
-      #overlay {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: #000000;
-        z-index: 10;
-        opacity: 1;
-      }
-
-      .fade-in {
-        animation-name: fade-in;
-        animation-duration: 2s;
-      }
-
-      @keyframes fade-in {
-        from {
-          opacity: 1;
-        }
-        to {
-          opacity: 0;
-        }
-      }
-
-      #briefcase-btn {
-        position: absolute;
-        left: 15px;
-        bottom: 15px;
-        width: 40px;
-        height: 40px;
-        border: none;
-        border-radius: 50%;
-        background: #3b53a2;
-        font-size: 25px;
-        color: #fff;
-      }
-
-      #briefcase {
-        position: absolute;
-        left: 20px;
-        bottom: 60px;
-        width: auto;
-        opacity: 0;
-        padding: 8px;
-        border-radius: 8px;
-        background: #3b53a2;
-        transition: opacity 0.5s;
-      }
-
-      #briefcase ul {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
-
-      #briefcase li {
-        float: left;
-      }
-
-      #briefcase li a {
-        padding: 0 3px 0 3px;
-      }
-
-      #briefcase img {
-        width: 100px;
-        height: 75px;
-      }
-    </style>
-    <style>
-      #menu {
-        display: none;
-        position: absolute;
-        top: 0;
-        right: 0;
-        background-color: #000;
-      }
-      .menu-item {
-        background-color: #404040;
-        font-size: 40px;
-        padding: 10px;
-      }
-      .menu-item a,
-      .menu-item a:visited {
-        color: #808080;
-      }
-      .menu-item a:hover,
-      .menu-item a:focus,
-      .menu-item a:active {
-        color: #000;
-      }
-
-      .section {
-        display: none;
-        position: absolute;
-        width: 90vw;
-        height: 90vh;
-        left: 50%;
-        margin-left: -45vw;
-        top: 50%;
-        margin-top: -45vh;
-        background-color: #ff0000;
-      }
-      #video {
-        background-color: #ff0000;
-      }
-      #music {
-        background-color: #00ff00;
-      }
-      #contact {
-        background-color: #0000ff;
-      }
-    </style>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
@@ -228,44 +51,55 @@
   </head>
 
   <body>
+    <video
+      id="video"
+      autoplay
+      loop
+      crossorigin="anonymous"
+      playsinline
+      style="display: none;"
+    >
+      <source
+        src="../assets/fbx/tv.mp4"
+        type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'
+      />
+    </video>
     <div id="menu">
-      <div class="menu-item">
+      <div id="menu-video" class="menu-item">
         <a href="#video">Video</a>
       </div>
-      <div class="menu-item">
+      <div id="menu-music" class="menu-item">
         <a href="#music">Music</a>
       </div>
-      <div class="menu-item">
+      <div id="menu-contact" class="menu-item">
         <a href="#contact">Contact</a>
+      </div>
+      <div id="menu-tour" class="menu-item">
+        <a href="#tour">Tour</a>
       </div>
     </div>
 
-    <div class="section" id="video"></div>
-    <div class="section" id="music"></div>
-    <div class="section" id="contact"></div>
-
-    <div id="message">
-      <p id="message_text"></p>
-      <button id="message_ok">OK</button>
+    <div id="bottom-title">
+      <div id="bottom-title-video" class="bottom-title-single highlighted">
+        <img src="" alt="Video" />
+      </div>
+      <div id="bottom-title-music" class="bottom-title-single">
+        <img src="" alt="Music" />
+      </div>
+      <div id="bottom-title-contact" class="bottom-title-single">
+        <img src="" alt="Contact" />
+      </div>
+      <div id="bottom-title-tour" class="bottom-title-single">
+        <img src="" alt="Tour" />
+      </div>
     </div>
 
-    <div id="overlay"></div>
-    <!-- <button id="sfx-btn"><i class="fas fa-volume-up"></i></button> -->
+    <div class="section" id="section-video"></div>
+    <div class="section" id="section-music"></div>
+    <div class="section" id="section-contact"></div>
+    <div class="section" id="section-tour"></div>
+
     <button id="action-btn"><i class="fas fa-hand-point-up"></i></button>
-    <!-- <button id="briefcase-btn"><i class="fas fa-briefcase"></i></button> -->
-    <div id="briefcase">
-      <ul>
-        <li>
-          <a href="#"><img /></a>
-        </li>
-        <li>
-          <a href="#"><img /></a>
-        </li>
-        <li>
-          <a href="#"><img /></a>
-        </li>
-      </ul>
-    </div>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
