--- a/losttreasure/v4/index.html
+++ b/losttreasure/v4/index.html
@@ -118,6 +118,14 @@
     <script src="../../libs/Tween.js"></script>
     <script src="../../libs/Preloader.js"></script>
     <script src="../../libs/Joystick.js"></script>
+    <script src="js/shaders/CopyShader.js"></script>
+    <script src="js/shaders/LuminosityShader.js"></script>
+    <script src="js/shaders/SobelOperatorShader.js"></script>
+    <script src="js/shaders/FXAAShader.js"></script>
+    <script src="js/postprocessing/EffectComposer.js"></script>
+    <script src="js/postprocessing/RenderPass.js"></script>
+    <script src="js/postprocessing/ShaderPass.js"></script>
+    <script src="js/postprocessing/OutlinePass.js"></script>
     <script src="game.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
