Add Gaussian Blur shader (unused)

--- a/losttreasure/v4/index.html
+++ b/losttreasure/v4/index.html
@@ -112,7 +112,7 @@
     <script src="../../libs/FBXLoader.js"></script>
     <script src="../../libs/DRACOLoader.js"></script>
     <script src="../../libs/Detector.js"></script>
-    <!--<script src="../../libs/stats.min.js"></script>-->
+    <script src="../../libs/stats.min.js"></script>
     <script src="../../libs/SFX.js"></script>
     <script src="../../libs/Easing.js"></script>
     <script src="../../libs/Tween.js"></script>
@@ -122,6 +122,8 @@
     <script src="js/shaders/LuminosityShader.js"></script>
     <script src="js/shaders/SobelOperatorShader.js"></script>
     <script src="js/shaders/FXAAShader.js"></script>
+    <script src="js/shaders/HorizontalBlurShader.js"></script>
+    <script src="js/shaders/VerticalBlurShader.js"></script>
     <script src="js/postprocessing/EffectComposer.js"></script>
     <script src="js/postprocessing/RenderPass.js"></script>
     <script src="js/postprocessing/ShaderPass.js"></script>
